--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "apexcharts": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^12.23.24",
     "jsvectormap": "^1.6.0",
+    "lucide-react": "^0.548.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "react": "19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.0.0",
-    "tailwind-merge": "^2.6.0"
+    "react-hook-form": "^7.65.0",
+    "tailwind-merge": "^2.6.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^22",
